--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 # Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+
 
 node_modules
+./*/node_modules
+./backend/.env
 dist
 dist-ssr
 *.local
