Implemented logic for user search

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,6 +4,10 @@
     "module": "NodeNext",
     "rootDir": "./",
     "outDir": "./dist",
-    "strict": true
-  }
+    "strict": true,
+    "paths": {
+      "@shared/types": ["../shared"]
+    }
+  },
+  "references": [{ "path": "../shared/tsconfig.json" }]
 }
