--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "multer": "^1.4.5-lts.1",
-    "node-csv": "^0.1.2"
+    "node-csv": "^0.1.2",
+    "zod": "^3.23.8"
   }
 }
